--- a/CSSanimasjon/css/footer.css
+++ b/CSSanimasjon/css/footer.css
@@ -1,6 +1,6 @@
 .footer {
     width: 100%;
-    height: 250px;
+    height: 100px;
     position: relative;
 
     display: flex;
@@ -21,13 +21,13 @@
 }
 
 .icons img {
-    width: 25px;
-    height: 25px;
+    width: 20px; 
+    height: auto; 
 
     display: block;
-    margin: 10px;
+    margin: 20px;
     position: relative;
-    top: 30px;
+    top: 34px;
     left: -100px;
 }
 
@@ -41,10 +41,13 @@
     left: -50px;
 }
 
+
 .some img {
     display: inline;
-    top: -145px;
-    left: 350px;
+    position: relative; 
+    top: -150px;
+    left: 300px; 
+
 }
 
 
@@ -95,7 +98,7 @@
 
     .some img {
         top: -70px;
-        left: -60px;
+        left: 0;
     }
 
 }
