--- a/CSSanimasjon/css/footer.css
+++ b/CSSanimasjon/css/footer.css
@@ -7,7 +7,7 @@
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
-    margin-top: 150px;
+    margin-top: 100px;
 }
 
 .logo.mini {
@@ -52,7 +52,9 @@
 
 
 @media screen and (max-width:768px) {
-
+    .footer {
+        margin-top: -10px; 
+    }
     .logo.mini img {
         width: auto;
         height: 52px;
@@ -105,6 +107,9 @@
 
 @media screen and (max-width:375px) {
  
+    .footer {
+        margin-top: -30px; 
+    }
     .logo.mini img {
         animation: none;
         margin-left: -100px;
