--- a/CSSanimasjon/css/hover-box.css
+++ b/CSSanimasjon/css/hover-box.css
@@ -291,7 +291,13 @@ a {
         margin-top: 100px;
         margin-bottom: -30px;
     }
+    .hover:after{
+       display: none; 
+    }
 
-    
+    .click {
+        margin-top: -140px; 
+        margin-left: 15px; 
+    }
 
 }
