--- a/footer.css
+++ b/footer.css
@@ -1,13 +1,13 @@
 .footer {
     width: 100%;
-    height: 250px;
+    height: 100px;
     position: relative;
 
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;    
-
+    margin-top: 200px;
 }
 
 .logo.liten {
@@ -31,7 +31,6 @@
     left: -100px;
 }
 
-
 .footer .icons p {
     text-align: left;
     font-size: 14px;
@@ -41,45 +40,59 @@
     top: -90px;
     left: -50px;
 }
+
 .some img {
     display: inline;
     position: relative; 
     top: -150px;
     left: 300px; 
-
 }
 
 
 @media (max-width: 768px) {
+
+    .footer {
+        margin-top: 300px; 
+    }
+
+    .logo img {
+        width: auto; 
+        height: 62px;
+    }
+
     .logo.liten img {
-        width: auto;
-        height: 52px;
+        width: auto; 
+        height: 52px; 
     }
 
     .logo.liten {
-        left: -50px;
+        left: -50px; 
     }
 
     .icons img {
-        top: 30px;
-        left: 0px;
+        top: 30px; 
+        left: 0px; 
     }
-
+    
     .footer .icons p {
-        font-size: 12px;
-        left: 50px;
+        font-size: 12px; 
+        left: 50px; 
     }
 
     .some img {
-        top: -70px;
+        top: -70px; 
         left: -60px;
     }
-
 }
 
 @media screen and (max-width:375px) {
 
+    .footer {
+        margin-top: 300px; 
+    }
+
     .logo.liten {
         left: -100px;
     }
+    
 }
