--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
 }
 
 /* Header */
+
 .top {
     width: 100%;
     height: 120px; 
@@ -122,6 +123,78 @@ input:focus + div .back{
 }
 
 
+/* Slideshow container */
+
+.slideshow-container {
+    max-width: 100%;
+    position: relative;
+    margin: auto;
+    z-index: 1;
+  }
+  
+  .slideshow-container img {
+    height: 600px; 
+  }
+
+  .mySlides {
+      display: none;
+  }
+
+  .text {
+    color: #f2f2f2;
+    background-color: rgba(34, 34, 34, 0.452); 
+    font-size: 30px;
+    padding: 50px 12px;
+    position: absolute;
+    bottom: 0;
+    top: 450px; 
+    width: 100%;
+    text-align: center;
+
+    font-family: 'Inconsolata', monospace; 
+    letter-spacing: 0.5px; 
+
+  }
+
+  .dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+  
+  .active, .dot:hover {
+    background-color: #717171;
+  }
+  
+  .fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  
+  @-webkit-keyframes fade {
+    from {
+        opacity: .4
+    } 
+    to {
+        opacity: 1
+    }
+  }
+  
+  @keyframes fade {
+    from {
+        opacity: .4
+    } 
+    to {
+        opacity: 1
+    }
+  }
+
+
 /* Tags */
 
 .tag-box {
@@ -195,75 +268,6 @@ input:focus + div .back{
     background-color: #f0b24b; 
 }
 
-/* Slideshow container */
-.slideshow-container {
-    max-width: 100%;
-    position: relative;
-    margin: auto;
-    z-index: 1;
-  }
-  
-  .slideshow-container img {
-    height: 600px; 
-  }
-
-  .mySlides {
-      display: none;
-  }
-
-  .text {
-    color: #f2f2f2;
-    background-color: rgba(34, 34, 34, 0.452); 
-    font-size: 30px;
-    padding: 50px 12px;
-    position: absolute;
-    bottom: 0;
-    top: 450px; 
-    width: 100%;
-    text-align: center;
-
-    font-family: 'Inconsolata', monospace; 
-    letter-spacing: 0.5px; 
-
-  }
-
-  .dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-  }
-  
-  .active, .dot:hover {
-    background-color: #717171;
-  }
-  
-  .fade {
-    animation-name: fade;
-    animation-duration: 1.5s;
-  }
-  
-  @-webkit-keyframes fade {
-    from {
-        opacity: .4
-    } 
-    to {
-        opacity: 1
-    }
-  }
-  
-  @keyframes fade {
-    from {
-        opacity: .4
-    } 
-    to {
-        opacity: 1
-    }
-  }
 
 /* Artikkler */
 
@@ -452,56 +456,6 @@ input:focus + div .back{
     border-color: #f0b24b transparent transparent transparent;
  }
 
-
-.footer {
-    width: 100%; 
-    height: 100px;
-    position: relative; 
-    top: 300px; 
-
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row; 
-    justify-content: center; 
-}
-
-.logo.liten {
-    left: -200px; 
-    position: relative; 
-}
-
-.logo.liten img {
-    width: auto; 
-    height: 62px; 
-}
-
-.icons img {
-    width: 25px;
-    height: 25px; 
-
-    display: block; 
-    margin: 10px; 
-    position: relative;
-    top: 30px; 
-    left: -100px; 
-}
-
-.footer .icons p {
-    text-align: left; 
-    font-size: 14px; 
-
-    margin: 25px; 
-    position: relative;
-    top: -90px; 
-    left: -50px; 
-}
-
-.some img {
-    display: inline;
-    top: -145px; 
-    left: 250px;
-}
-
 /* Repsonsiv */
 
 @media screen and (max-width: 1200px) {
@@ -583,34 +537,20 @@ input:focus + div .back{
 }
 
 @media screen and (max-width:768px) {
-    .logo img {
-        width: auto; 
-        height: 62px;
-    }
 
-    .logo.liten img {
-        width: auto; 
-        height: 52px; 
-    }
 
-    .logo.liten {
-        left: -50px; 
-    }
-
-    .icons img {
-        top: 30px; 
-        left: 0px; 
+    .btn.h{
+        background-color: #ed612c; 
     }
     
-    .footer .icons p {
-        font-size: 12px; 
-        left: 50px; 
+    .btn.c{
+        background-color: #00adf6; 
     }
-
-    .some img {
-        top: -70px; 
-        left: -60px;
+    
+    .btn.j{
+        background-color: #f0b24b; 
     }
+    
 }
 
 @media screen and (max-width:375px) {
@@ -636,11 +576,4 @@ input:focus + div .back{
         margin-top: -320px; 
     }
 
-    .logo.liten {
-        left: -100px; 
-    }
 }
-
-
-
-/* fjern hover på btn og animasjon når responsivt*/
