--- a/Tagsider/html_style.css
+++ b/Tagsider/html_style.css
@@ -11,19 +11,20 @@ body {
     padding: 0;
     background-color: rgb(34, 34, 34);
     line-height: 1.6em;
-    /* background-color: rgb(34, 34, 34); */
     color: white;
-    font-family: 'Inconsolata', monospace;
+    font-family: 'Montserrat', monospace;
+    max-width: 100vw;
 }
 
 
 body>main {
-    max-width: 980px;
+    max-width: 100vw;
     margin: 0 auto;
     padding: 2rem;
 }
 
 /* Heading on side */
+
 .heading {
     margin-top: 60px;
     display: flex;
@@ -33,7 +34,7 @@ body>main {
 }
 
 h1 {
-    font-size: 3.25rem;
+    font-size: 2.5rem;
     z-index: 1;
     left: 50px;
     margin-left: 120px;
@@ -57,6 +58,7 @@ h1 {
 }
 
 /* Information box */
+
 .tag_information {
     width: 1000px;
     margin: 0 auto;
@@ -69,14 +71,12 @@ h1 {
 .text_box {
     width: 690px;
     height: auto;
-    font-family: montserrat;
+    font-family: 'montserrat';
     margin: 0 auto;
-    /* border: 1px solid white; */
 }
 
-.text_box>p {
+.text_box > p {
     color: white;
-    font-family: montserrat;
     font-size: 1.1rem;
     font-weight: 100;
     text-align: left;
@@ -97,7 +97,6 @@ h1 {
     background-repeat: no-repeat;
     margin: 0 auto;
     margin-top: 90px;
-    /* border: 1px solid white; */
 }
 
 .tag_information h2 {
@@ -108,81 +107,31 @@ h1 {
     border-bottom: 2px solid white;
     margin-left: 75px;
     margin-right: 75px;
+    margin-bottom: -100px; 
 }
 
-/* Articles */
-.lesmer main {
-    max-width: 850px;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-column-gap: 9rem;
-    grid-row-gap: 9rem;
+
+@media screen and (max-width:768px) {
+    .text_box {
+        width: 500px;
+        height: auto;
+        margin-left: 50px; 
+    }
+    
+    .img_box {
+        background-position: left;
+        margin-left: 300px; 
+    }
+
+    .tag_information h2 {
+        text-align: left;
+        border: none; 
+        margin-left: 200px; 
+    }
+
+    .heading:hover .html_head_marker {
+        transform: none; 
+        width: 350px; 
+    }
 }
 
-.lesmer article {
-    background: 0;
-    /* background-color: #303030; */
-    /* border-radius: 10px 10px 8px 8px; */
-    /* box-shadow: 0 6px 8px rgb(22, 22, 22); */
-    height: 340px;
-    transition: 0.5s;
-    opacity: 0.5;
-}
-
-.lesmer article:hover {
-    transform: scale(1.05);
-    box-shadow: 4px 8px 8px rgb(15, 15, 15);
-    opacity: 1;
-}
-
-.lesmer img {
-    width: 100%;
-    display: block;
-    text-align: center;
-    box-shadow: 0 6px 8px rgb(22, 22, 22);
-}
-
-.lesmer img:hover {
-    box-shadow: none;
-}
-
-.lesmer h3 {
-    color: white;
-    font-weight: 400;
-    padding: 1rem;
-    /* padding-top: auto;
-    margin: 0; */
-
-    width: 100%;
-    height: 80px;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: -16px;
-
-    visibility: hidden;
-
-    /* text-decoration: none;
-    visibility: hidden;
-    background-color: rgba(34, 34, 34, 0.658);
-    padding-top: 30px; */
-}
-
-article:hover h3 {
-    visibility: visible;
-}
-
-.lesmer a {
-    text-decoration: none;
-    color: black;
-}
-
-.lesmer a .corner_marker {
-    position: absolute;
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 35px 35px 0 0;
-    border-color: #ed612c transparent transparent transparent;
-}
